--- a/index.html
+++ b/index.html
@@ -102,8 +102,8 @@
                     </div>
                 </div>
                 <div>
-                    <label for="price-input" class="block text-sm font-medium text-gray-300">Precio (Q)</label>
-                    <input type="number" id="price-input" step="0.01" placeholder="Ej: 15.50" class="mt-1 block w-full bg-gray-900 border border-gray-600 rounded-md shadow-sm py-2 px-3 text-white focus:outline-none focus:ring-indigo-500 focus:border-indigo-500">
+                    <label for="price-input" class="block text-sm font-medium text-gray-300">Precio (MXN)</label>
+                    <input type="number" id="price-input" step="0.01" placeholder="Ej: 35.50" class="mt-1 block w-full bg-gray-900 border border-gray-600 rounded-md shadow-sm py-2 px-3 text-white focus:outline-none focus:ring-indigo-500 focus:border-indigo-500">
                 </div>
                 <div>
                     <label for="store-select" class="block text-sm font-medium text-gray-300">Tienda</label>
@@ -207,7 +207,7 @@
                     li.className = `flex justify-between items-center p-3 rounded-lg ${isCheapest ? 'bg-green-500/20 border border-green-500' : 'bg-gray-700'}`;
                     li.innerHTML = `
                         <span class="font-medium ${isCheapest ? 'text-green-300' : 'text-gray-300'}">${store}</span>
-                        <span class="font-bold text-xl ${isCheapest ? 'text-green-300' : 'text-white'}">Q ${Number(price).toFixed(2)}</span>
+                        <span class="font-bold text-xl ${isCheapest ? 'text-green-300' : 'text-white'}">MXN ${Number(price).toFixed(2)}</span>
                     `;
                     dom.priceList.appendChild(li);
                 });
@@ -277,7 +277,7 @@
                 const apiKey = ""; // Canvas will provide this
                 const apiUrl = `https://generativelanguage.googleapis.com/v1beta/models/gemini-2.5-flash-preview-05-20:generateContent?key=${apiKey}`;
 
-                const systemPrompt = "Actúa como un experto en catalogación de productos de supermercado en Guatemala. Tu única tarea es sugerir un nombre corto y descriptivo para un producto, basándote en su código de barras. Proporciona solo el nombre del producto, sin explicaciones ni texto adicional.";
+                const systemPrompt = "Actúa como un experto en catalogación de productos de supermercado en México. Tu única tarea es sugerir un nombre corto y descriptivo para un producto, basándote en su código de barras. Proporciona solo el nombre del producto, sin explicaciones ni texto adicional.";
                 const userQuery = `El código de barras es: ${barcode}. Sugiere un nombre.`;
 
                 const payload = {
