--- a/index.html
+++ b/index.html
@@ -202,7 +202,7 @@
             <div>
                 <h1 id="main-title" class="text-3xl md:text-5xl font-bold text-white flex items-center">
                     
-<img src="https://raw.githubusercontent.com/GlitchRob/Glitchrob.github.io/refs/heads/main/IMG_20250928_094213_530.jpg" width="30">
+<img src="https://raw.githubusercontent.com/GlitchRob/Glitchrob.github.io/refs/heads/main/app_icon.png" width="30">
                     <span>SCRAPFLIX</span>
                 </h1>
                 <h2 id="view-subtitle" class="text-lg text-gray-400 mt-1"></h2>
